--- a/ccweb-gateway/pom.xml
+++ b/ccweb-gateway/pom.xml
@@ -31,6 +31,20 @@
     <!-- 加入依赖 -->
     <dependencies>
         <dependency>
+            <groupId>ccait.cn</groupId>
+            <artifactId>ccweb-core</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../lib/ccweb-core/2.0.0-SNAPSHOT/ccweb-core-2.0.0-20210310.091940-1.jar</systemPath>
+        </dependency>
+        <dependency>
+            <groupId>ccait.cn</groupId>
+            <artifactId>entity.queryable</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/../lib/entity.queryable/1.0.0-SNAPSHOT/entity.queryable-1.0.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-eureka</artifactId>
             <version>1.4.2.RELEASE</version>
