--- a/ccweb-start/src/main/resources/application.yml
+++ b/ccweb-start/src/main/resources/application.yml
@@ -15,6 +15,7 @@ spring:
 
   zipkin: #分布式链路配置
     base-url: http://localhost:9411
+    discoveryClientEnabled: false
   thymeleaf:
     cache: false
   devtools: #dev tools
