--- a/pom.xml
+++ b/pom.xml
@@ -37,51 +37,44 @@
         <java.version>1.8</java.version>
         <github.global.server>github</github.global.server>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <logback-kafka-appender.version>0.2.0-RC1</logback-kafka-appender.version>
+        <janino.version>3.0.8</janino.version>
     </properties>
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>entityQueryable</id>-->
-<!--            <url>https://raw.github.com/linlurui/entityQueryable/1.0</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>true</enabled>-->
-<!--                <updatePolicy>always</updatePolicy>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
-<!--        <repository>-->
-<!--            <id>ccweb</id>-->
-<!--            <url>https://raw.github.com/linlurui/ccweb/2.0</url>-->
-<!--            <snapshots>-->
-<!--                <enabled>true</enabled>-->
-<!--                <updatePolicy>always</updatePolicy>-->
-<!--            </snapshots>-->
-<!--        </repository>-->
-<!--    </repositories>-->
+    <repositories>
+        <repository>
+            <id>ccweb2</id>
+            <url>https://gitee.com/ccait/ccweb2/raw/2.0</url>
+            <releases>
+                <updatePolicy>always</updatePolicy>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <updatePolicy>always</updatePolicy>
+                <enabled>true</enabled>
+                <checksumPolicy>fail</checksumPolicy>
+            </snapshots>
+        </repository>
+    </repositories>
 
     <distributionManagement>
         <repository>
             <id>gitee</id>
-            <url>file:${project.build.directory}/../deploy</url>
+            <url>file:${project.build.directory}/deploy</url>
         </repository>
     </distributionManagement>
 
     <dependencies>
         <dependency>
             <groupId>ccait.cn</groupId>
-            <artifactId>entity.queryable</artifactId>
-            <version>1.0.0-SNAPSHOT</version>
+            <artifactId>ccweb-core</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
         </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>net.sf.jmimemagic</groupId>-->
 <!--            <artifactId>jmimemagic</artifactId>-->
 <!--            <version>0.1.5</version>-->
 <!--        </dependency>-->
-        <dependency>
-            <groupId>ccait.cn</groupId>
-            <artifactId>ccweb-core</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/lib/ccweb-core/2.0.0-SNAPSHOT/ccweb-core-2.0.0-20210310.091940-1.jar</systemPath>
-        </dependency>
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -100,42 +93,22 @@
             <scope>provided</scope>
         </dependency>
 
-        <!-- 引入log4j2依赖 -->
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.25</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.8.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-web</artifactId>
-            <version>2.8.2</version>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.8.2</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.8.2</version>
-        </dependency>
-
         <dependency>
             <groupId>com.lmax</groupId>
             <artifactId>disruptor</artifactId>
             <version>3.3.6</version>
+        </dependency>
+
+        <!-- 在xml中使用<if condition>的时候用到的jar包 -->
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>janino</artifactId>
+            <version>${janino.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.codehaus.janino</groupId>
+            <artifactId>commons-compiler</artifactId>
+            <version>${janino.version}</version>
         </dependency>
 
         <!--SpringSession依赖-->
@@ -172,13 +145,6 @@
             <artifactId>foundation-config</artifactId>
             <version>0.2.0</version>
         </dependency>
-
-        <!--注释掉couchbase.jdbc才能正常启动webflux,否则只能用spring-boot-web-->
-<!--        <dependency>-->
-<!--            <groupId>com.couchbase.jdbc</groupId>-->
-<!--            <artifactId>jdbc-n1ql</artifactId>-->
-<!--            <version>1.0-BETA</version>-->
-<!--        </dependency>-->
 
         <dependency>
             <groupId>com.sun</groupId>
@@ -235,38 +201,38 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.1</version>
-                <configuration>
-                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/ccweb</altDeploymentRepository>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>com.github.github</groupId>
-                <artifactId>site-maven-plugin</artifactId>
-                <version >0.12</version>
-                <configuration>
-                    <message >Maven artifacts for ${project.version}</message>
-                    <noJekyll>true</noJekyll>
-                    <outputDirectory>${project.build.directory}/ccweb</outputDirectory><!--本地jar地址-->
-                    <branch>refs/heads/release2.0</branch><!--分支的名称-->
-                    <merge>true</merge>
-                    <includes>
-                        <include>**/*</include>
-                    </includes>
-                    <repositoryName>ccweb</repositoryName><!--对应github上创建的仓库名称 name-->
-                    <repositoryOwner>linlurui</repositoryOwner><!--github 仓库所有者即登录用户名-->
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>site</goal>
-                        </goals>
-                        <phase>deploy</phase>
-                    </execution>
-                </executions>
-            </plugin>
+            <!--<plugin>-->
+                <!--<artifactId>maven-deploy-plugin</artifactId>-->
+                <!--<version>2.8.1</version>-->
+                <!--<configuration>-->
+                    <!--<altDeploymentRepository>internal.repo::default::file://${project.build.directory}/ccweb</altDeploymentRepository>-->
+                <!--</configuration>-->
+            <!--</plugin>-->
+            <!--<plugin>-->
+                <!--<groupId>com.github.github</groupId>-->
+                <!--<artifactId>site-maven-plugin</artifactId>-->
+                <!--<version >0.12</version>-->
+                <!--<configuration>-->
+                    <!--<message >Maven artifacts for ${project.version}</message>-->
+                    <!--<noJekyll>true</noJekyll>-->
+                    <!--<outputDirectory>${project.build.directory}/ccweb</outputDirectory>&lt;!&ndash;本地jar地址&ndash;&gt;-->
+                    <!--<branch>refs/heads/release2.0</branch>&lt;!&ndash;分支的名称&ndash;&gt;-->
+                    <!--<merge>true</merge>-->
+                    <!--<includes>-->
+                        <!--<include>**/*</include>-->
+                    <!--</includes>-->
+                    <!--<repositoryName>ccweb</repositoryName>&lt;!&ndash;对应github上创建的仓库名称 name&ndash;&gt;-->
+                    <!--<repositoryOwner>linlurui</repositoryOwner>&lt;!&ndash;github 仓库所有者即登录用户名&ndash;&gt;-->
+                <!--</configuration>-->
+                <!--<executions>-->
+                    <!--<execution>-->
+                        <!--<goals>-->
+                            <!--<goal>site</goal>-->
+                        <!--</goals>-->
+                        <!--<phase>deploy</phase>-->
+                    <!--</execution>-->
+                <!--</executions>-->
+            <!--</plugin>-->
         </plugins>
     </build>
 </project>
