--- a/ccweb-start/pom.xml
+++ b/ccweb-start/pom.xml
@@ -17,6 +17,9 @@
         <java.version>1.8</java.version>
         <github.global.server>github</github.global.server>
         <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <hadoop.version>2.5.0</hadoop.version>
+        <hive.version>0.13.1</hive.version>
+        <hbase.version>0.98.6-hadoop2</hbase.version>
     </properties>
 
     <groupId>ccait.cn</groupId>
@@ -28,13 +31,6 @@
     <description>ccait framework</description>
 
     <dependencies>
-        <dependency>
-            <groupId>ccait.cn</groupId>
-            <artifactId>ccweb-core</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${project.basedir}/../lib/ccweb-core/2.0.0-SNAPSHOT/ccweb-core-2.0.0-20210310.091940-1.jar</systemPath>
-        </dependency>
 
         <dependency>
             <groupId>ccait.cn</groupId>
@@ -125,65 +121,40 @@
             <version>10.14.1.0</version>
         </dependency>
 
-        <!--couchbase使用logback日志系统，暂不支持-->
-        <!--<dependency>-->
-            <!--<groupId>com.couchbase.jdbc</groupId>-->
-            <!--<artifactId>jdbc-n1ql</artifactId>-->
-            <!--<version>1.0-BETA</version>-->
-        <!--</dependency>-->
+        <!--couchbase-->
+        <dependency>
+            <groupId>com.couchbase.jdbc</groupId>
+            <artifactId>jdbc-n1ql</artifactId>
+            <version>1.0-BETA</version>
+        </dependency>
 
-        <!--hadoop驱动支持-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-hdfs</artifactId>-->
-            <!--<version>2.6.4</version>-->
-        <!--</dependency>-->
+        <!--hadoop驱动不能支持-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hadoop</groupId>-->
+<!--            <artifactId>hadoop-client</artifactId>-->
+<!--            <version>${hadoop.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hive</groupId>-->
+<!--            <artifactId>hive-jdbc</artifactId>-->
+<!--            <version>${hive.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hive</groupId>-->
+<!--            <artifactId>hive-exec</artifactId>-->
+<!--            <version>${hive.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase-server</artifactId>-->
+<!--            <version>${hbase.version}</version>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>org.apache.hbase</groupId>-->
+<!--            <artifactId>hbase-client</artifactId>-->
+<!--            <version>${hbase.version}</version>-->
+<!--        </dependency>-->
 
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hadoop</groupId>-->
-            <!--<artifactId>hadoop-common</artifactId>-->
-            <!--<version>2.6.4</version>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hive</groupId>-->
-            <!--<artifactId>hive-exec</artifactId>-->
-            <!--<version>1.1.0</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<artifactId>-->
-                        <!--pentaho-aggdesigner-algorithm-->
-                    <!--</artifactId>-->
-                    <!--<groupId>org.pentaho</groupId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
-
-        <!--<dependency>-->
-            <!--<groupId>org.apache.hive</groupId>-->
-            <!--<artifactId>hive-jdbc</artifactId>-->
-            <!--<version>1.1.0</version>-->
-            <!--<exclusions>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.eclipse.jetty.aggregate</groupId>-->
-                    <!--<artifactId>jetty-all</artifactId>-->
-                <!--</exclusion>-->
-                <!--<exclusion>-->
-                    <!--<groupId>org.apache.hive</groupId>-->
-                    <!--<artifactId>hive-shims</artifactId>-->
-                <!--</exclusion>-->
-            <!--</exclusions>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.calcite</groupId>-->
-            <!--<artifactId>calcite-core</artifactId>-->
-            <!--<version>1.6.0</version>-->
-        <!--</dependency>-->
-        <!--<dependency>-->
-            <!--<groupId>org.apache.calcite</groupId>-->
-            <!--<artifactId>calcite-avatica</artifactId>-->
-            <!--<version>1.6.0</version>-->
-        <!--</dependency>-->
 
         <!--SpringBoot2.0+SpringCloud依赖-->
         <!--        <dependency>-->
