add mail & jobs

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,48 @@ entityqueryable
 ccweb-start-2.0.0-SNAPSHOT.jar
 */ccweb-start-2.0.0-SNAPSHOT.jar
 **/ccweb-start-2.0.0-SNAPSHOT.jar
+
+
+*.vue.js
+*.map
+*.log
+/**/8.map
+workspace.xml
+ccweb-ui/dist
+ccweb-ui/node_modules
+ccweb-ui/publish
+ccweb-ui/src/utils/*.js
+ccweb-ui/src/store/*.js
+ccweb-ui/src/router/*.js
+ccweb-ui/src/pages/*.js
+ccweb-ui/src/common/*.js
+ccweb-ui/src/components/*.js
+ccweb-ui/src/utils/**/*.js
+ccweb-ui/src/store/**/*.js
+ccweb-ui/src/router/**/**/*.js
+ccweb-ui/src/pages/**/*.js
+ccweb-ui/src/components/**/*.js
+ccweb-ui/src/*.map
+ccweb-ui/src/**/*.map
+ccweb-ui/src/*.js
+ccweb-ui/src/utils/*.map
+ccweb-ui/src/store/*.map
+ccweb-ui/src/router/*.map
+ccweb-ui/src/pages/*.map
+ccweb-ui/src/common/*.map
+ccweb-ui/src/components/*.map
+ccweb-ui/src/utils/**/*.map
+ccweb-ui/src/store/**/*.map
+ccweb-ui/src/router/**/**/*.map
+ccweb-ui/src/pages/**/*.map
+ccweb-ui/src/components/**/*.map
+ccweb-ui/src/common/**/*.js
+ccweb-ui/src/router/**/*.js
+ccweb-ui/src/styles/**/*.js
+ccweb-ui/src/views/**/*.js
+ccweb-ui/db
+ccweb-ui/ccweb-start-2.0.0-SNAPSHOT.jar
+ccweb-ui/*/ccweb-start-2.0.0-SNAPSHOT.jar
+ccweb-ui/**/ccweb-start-2.0.0-SNAPSHOT.jar
+ccweb-ui/public/service/ccweb-start-2.0.0-SNAPSHOT.jar
+ccweb-ui/public/web/db
