--- a/ccweb-api/pom.xml
+++ b/ccweb-api/pom.xml
@@ -21,7 +21,11 @@
             <artifactId>ccweb-core</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>ccait.cn</groupId>
+            <artifactId>entity.queryable</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>ccait.cn</groupId>
             <artifactId>ccweb-office</artifactId>
