--- a/ccweb-auth/src/main/resources/application.yml
+++ b/ccweb-auth/src/main/resources/application.yml
@@ -87,9 +87,8 @@ mqtt:
         - testtt:
             qos: 0
 
-# 6.ccweb配置
+# 6.数据源配置
 entity:
-  lang: cn
   datasource:
     activated: sqlite #可通过url的{datasource}参数访问到该数据库，没有在此设置的environment不能通过url访问到
     #configFile: db-config.xml #数据库配置路径
@@ -99,6 +98,10 @@ entity:
         driver: org.sqlite.JDBC
         url: jdbc:sqlite:ccait.db
 
+
+# 7.ccweb配置
+ccweb:
+  lang: cn
   ignoreTotalCount: true #忽略查询总数
   package: ccait.ccweb.entites #实体类生成包路径
   suffix: Entity #实体类生成类名后辍
@@ -235,7 +238,7 @@ entity:
     privilegeId: UUID_RANDOM
     acl.aclId: UUID_RANDOM
 
-# 7.服务器配置
+# 8.服务器配置
 server:
   port: 8000 #端口号
   tomcat:
