--- a/ccweb-iot/pom.xml
+++ b/ccweb-iot/pom.xml
@@ -20,6 +20,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-webmvc</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>ccait.cn</groupId>
             <artifactId>ccweb-core</artifactId>
             <version>2.0.0-SNAPSHOT</version>
