--- a/ccweb-jobs/pom.xml
+++ b/ccweb-jobs/pom.xml
@@ -9,7 +9,14 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>ccweb-webagent</artifactId>
+    <artifactId>ccweb-jobs</artifactId>
+
+    <version>2.0.0-SNAPSHOT</version>
+
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
 
     <dependencies>
         <dependency>
