--- a/ccweb-start/pom.xml
+++ b/ccweb-start/pom.xml
@@ -58,6 +58,12 @@
 
         <dependency>
             <groupId>ccait.cn</groupId>
+            <artifactId>ccweb-mail</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ccait.cn</groupId>
             <artifactId>ccweb-logs</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
