--- a/ccweb-start/pom.xml
+++ b/ccweb-start/pom.xml
@@ -31,10 +31,15 @@
     <description>ccait framework</description>
 
     <dependencies>
-
         <dependency>
             <groupId>ccait.cn</groupId>
             <artifactId>ccweb-api</artifactId>
+            <version>2.0.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>ccait.cn</groupId>
+            <artifactId>ccweb-jobs</artifactId>
             <version>2.0.0-SNAPSHOT</version>
         </dependency>
 
@@ -168,10 +173,10 @@
         </dependency>
 
         <!--SpringBoot2.0+SpringCloud依赖-->
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.cloud</groupId>-->
-        <!--            <artifactId>spring-cloud-starter-openfeign</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>org.springframework.cloud</groupId>-->
         <!--            <artifactId>spring-cloud-starter-config</artifactId>-->
@@ -185,10 +190,10 @@
         <!--            <artifactId>spring-cloud-starter-netflix-zuul</artifactId>-->
         <!--        </dependency>-->
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.springframework.cloud</groupId>-->
-        <!--            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+        </dependency>
         <!--        <dependency>-->
         <!--            <groupId>org.springframework.cloud</groupId>-->
         <!--            <artifactId>spring-cloud-starter-gateway</artifactId>-->
